// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout reducer should handle LAYOUT_CHANGE_ACTIVE 1`] = `
Object {
  "activeMenu": "Monitor",
  "currentLocation": Object {
    "title": "Any Location",
  },
  "currentOrganization": Object {
    "title": "Any Organization",
  },
  "isLoading": false,
  "isNavOpen": true,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_CHANGE_IS_NAV_OPEN 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentLocation": Object {
    "title": "Any Location",
  },
  "currentOrganization": Object {
    "title": "Any Organization",
  },
  "isLoading": false,
  "isNavOpen": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_CHANGE_LOCATION 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentLocation": "yaml",
  "currentOrganization": Object {
    "title": "Any Organization",
  },
  "isLoading": false,
  "isNavOpen": true,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_CHANGE_ORG 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentLocation": Object {
    "title": "Any Location",
  },
  "currentOrganization": "org1",
  "isLoading": false,
  "isNavOpen": true,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_HIDE_LOADING 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentLocation": Object {
    "title": "Any Location",
  },
  "currentOrganization": Object {
    "title": "Any Organization",
  },
  "isLoading": false,
  "isNavOpen": true,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_INITIALIZE 1`] = `
Object {
  "activeMenu": "some-menu",
  "currentLocation": "some location",
  "currentOrganization": "some organization",
  "isLoading": false,
  "isNavOpen": true,
  "items": "some-items",
}
`;

exports[`Layout reducer should handle LAYOUT_SHOW_LOADING 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentLocation": Object {
    "title": "Any Location",
  },
  "currentOrganization": Object {
    "title": "Any Organization",
  },
  "isLoading": true,
  "isNavOpen": true,
  "items": Array [],
}
`;

exports[`Layout reducer should return the initial state 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentLocation": Object {
    "title": "Any Location",
  },
  "currentOrganization": Object {
    "title": "Any Organization",
  },
  "isLoading": false,
  "isNavOpen": true,
  "items": Array [],
}
`;
